test/errors/typecheck/bad_index.ty
foo := func(n: number) -> number {
	return n[3]
}